--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       </div>
       </nav>
    <section class="hero">
-      <div class="explore-btn">
-         <a href="">Explore More</a>
-      </div>
       <div class="content">
          <h1>We Have A Passion in Creating A new and unique spaces <span> C NOVELLA</span></h1>
          <p>We Will help you to make on elegant and luxurious interior designed by professional interior designers</p>
          <a href="">Learn More  <i class="uil uil-arrow-up-right"></i></a>
+         <a href="" class="explore-btn">Explore More</a>
+      </div>
+      <div class="">
+         
       </div>
    </section>
 </header>
